--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "clementinejs-fcc",
+  "name": "voting-app-klm",
   "version": "1.0.1",
   "description": "The elegant and lightweight boilerplate for full stack JavaScript.",
   "main": "server.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/johnstonbl01/clementinejs-fcc"
+    "url": "git+https://github.com/johnstonbl01/clementinejs-fcc.git"
   },
   "homepage": "http://www.clementinejs.com/",
-  "bugs": "https://github.com/johnstonbl01/clementinejs-fcc/issues",
+  "bugs": {
+    "url": "https://github.com/johnstonbl01/clementinejs-fcc/issues"
+  },
   "keywords": [
     "MongoDB",
     "Mongoose",
@@ -19,9 +21,9 @@
     "boilerplate"
   ],
   "scripts": {
-  "start": "node server.js"
+    "start": "node server.js"
   },
-  "author": "Blake Johnston",
+  "author": "",
   "license": "MIT",
   "dependencies": {
     "dotenv": "^1.2.0",
@@ -30,5 +32,6 @@
     "mongoose": "^4.1.0",
     "passport": "^0.3.0",
     "passport-github": "^1.0.0"
-  }
+  },
+  "devDependencies": {}
 }
