--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "voting-app-klm",
   "version": "1.0.1",
-  "description": "The elegant and lightweight boilerplate for full stack JavaScript.",
+  "description": "This is a voting app project for FreeCodeCamp made by Kenneth Malicay.",
   "main": "server.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/johnstonbl01/clementinejs-fcc.git"
+    "url": "git+https://github.com/kennethlumalicay/voting-app.git"
   },
   "homepage": "http://www.clementinejs.com/",
   "bugs": {
-    "url": "https://github.com/johnstonbl01/clementinejs-fcc/issues"
+    "url": "https://voting-app-klm.herokuapp.com/"
   },
   "keywords": [
     "MongoDB",
