--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "boilerplate"
   ],
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
   "author": "",
