--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "express-session": "^1.11.3",
     "mongoose": "^4.1.0",
     "passport": "^0.3.0",
-    "passport-github": "^1.0.0"
+    "passport-github": "^1.0.0",
+    "ejs": "^2.5.6"
   },
   "devDependencies": {}
 }
