--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ GITHUB_SECRET=someRandomString
 APP_URL=http://app-url.com/
 MONGO_URI="mongodb://user:pass@ssss.mlab.com:0000/voting-app-db"
 PORT=3000
+test=test
