--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "mongoose": "^4.1.0",
     "passport": "^0.3.0",
     "passport-github": "^1.0.0",
-    "ejs": "^2.5.6"
+    "ejs": "^2.5.6",
+    "body-parser": "^1.17.2"
   },
   "devDependencies": {}
 }
