--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 GITHUB_KEY=someRandomString
 GITHUB_SECRET=someRandomString
 APP_URL=http://app-url.com/
-MONGO_URI="mongodb://user:pass@ssss.mlab.com:0000/voting-app-db"
+MONGO_URI=mongodb://user:pass@ssss.mlab.com:0000/voting-app-db
 PORT=3000
